# boocax_work

./: README.md
Barcode/: CMakeLists.txt  CMakeLists.txt.autosave  Readme.md
Barcode/examples/: main.cpp  test2.cpp  test_barcode.cpp  test_pnp.cpp
Barcode/img/initial_picture/: 3.txt
Barcode/img/processed_pic/IMG_Test/: 4.txt  5.txt  6.txt
Barcode/img/processed_pic/TXT_Test/: 1.txt  2.txt
Barcode/include/: barcode_localization.h  extrafunction.h  find_barcode.h  solve_pnp.h
Barcode/src/: barcode_localization (test-version).cpp  barcode_localization.cpp  extrafunction.cpp  find_barcode.cpp  solve_pnp.cpp
Barcode/文档/: A  基于条形码的AGV定位方案.odt
Barcode/文档/分析结果/: PNP分析结果1.ods  auto.txt
EKF_P4P/: .gitignore  CMakeLists.txt  Readme.md  main.cpp  para.yaml
EKF_P4P/include/: camera.h  common.h  extra_function.h  system.h  vehicle.h  viewer.h
EKF_P4P/qt-build/: CMakeCache.txt  Ekf_p4p.cbp  Makefile  cmake_install.cmake
EKF_P4P/src/: camera.cpp  extra_function.cpp  system.cpp  vehicle.cpp  viewer.cpp
SLE_monocularSLAM/: .gitignore  CMakeLists.txt  README.md  SLAM汇报.pptx  程序说明.docx
SLE_monocularSLAM/config/: default.yaml
SLE_monocularSLAM/image/: 数据参数
SLE_monocularSLAM/include/: camera.h  common.h  config.h  frame.h  initialize_mono.h  map.h  mappoint.h  sift_line_endpoint.h  visual_odometry.h
SLE_monocularSLAM/src/: Converter.cc  Initializer.cc  Initializer.cc.autosave  Optimizer.cc  camera.cpp  config.cpp  frame.cpp  g2o_types.cpp  initialize_mono.cpp  map.cpp  mappoint.cpp  sift_line_endpoint.cpp  visual_odometry.cpp
SLE_monocularSLAM/test/: find_tableleg.cpp  pose_of_tableleg.cpp  testCamera.cpp  test_calhist.cpp  test_harries_corner.cpp  test_imageprocess.cpp  test_picture.cpp  test_redfile.cpp  test_vedio.cpp
